--- a/style.css
+++ b/style.css
@@ -1,13 +1,18 @@
 body {
-    background-color: lightgray;
+    background-color: #E6E6E6;
 }
 #nav-image {
     height: 80px;
     width: 80px;
 }
-.rounded-circle {
-    background-color: #f15252;
-    border:5px solid white;
+#circles {
+    display: flex;
+    vertical-align: center;
+    justify-content: center;
+}
+#design {
+    background-color: #E6563B;
+    border:5px solid #F0F0F0;
     height:100px;
     border-radius:50%;
     -moz-border-radius:50%;
@@ -15,12 +20,49 @@ body {
     width:100px;
     display: flex;
     align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
 }
-
-/*    width: 100px;*/
-/*    height: 100px;*/
-/*    background: red;*/
-/*    border-radius: 50%*/
-/*    border: gray solid 5px;*/
-/*    box-sizing: border-box;*/
-/*}*/
+#develop {
+    background-color: #EB9D3A;
+    border:5px solid #F0F0F0;
+    height:100px;
+    border-radius:50%;
+    -moz-border-radius:50%;
+    -webkit-border-radius:50%;
+    width:100px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+}
+#support {
+    background-color: #7CB06C;
+    border:5px solid #F0F0F0;
+    height:100px;
+    border-radius:50%;
+    -moz-border-radius:50%;
+    -webkit-border-radius:50%;
+    width:100px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+}
+#host {
+    background-color: #00ABA9;
+    border:5px solid #F0F0F0;
+    height:100px;
+    border-radius:50%;
+    -moz-border-radius:50%;
+    -webkit-border-radius:50%;
+    width:100px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+}
