--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #E6E6E6;
+    background-color: #E0E0E0;
 }
 #nav-image {
     height: 80px;
@@ -110,8 +110,12 @@ body {
 }
 @media (min-width: 960px) {
     body{
-        padding: 3em 7em;
+        /*padding: 5px 7px;*/
+        /*margin-left: 80px;*/
     }
+}
+#selected-work {
+
 }
 .under-the-picture {
     display: flex;
@@ -141,4 +145,27 @@ body {
 }
 .blueCircle {
     background-color: #00ABA9;
+}
+.right-side-images {
+    min-height: 85px;
+    min-width: 100px;
+    max-width: 100px;
+    /*border: solid #b9b7b7;*/
+    margin-right: 10px;
+    margin-top: 5px;
+    /*border-radius: 5px;*/
+}
+.right-side-text {
+    display: flex;
+    flex-direction: column;
+    font-size: 14px;
+    /*justify-content: space-around;*/
+}
+.image-plus-text {
+    display: flex;
+    /*flex-direction: row;*/
+    justify-content: space-between;
+}
+div {
+    text-align: center;
 }
