--- a/style.css
+++ b/style.css
@@ -114,9 +114,9 @@ body {
         /*padding: 5px 7px;*/
         /*margin-left: 80px;*/
     }
-    .image {
-        height: 200px;
-        width: 250px;
+    /*.image {*/
+    /*    height: 200px;*/
+    /*    width: 250px;*/
     }
 }
 #selected-work {
@@ -198,11 +198,11 @@ div {
     .container {
         width: 100%;
     }
-
-    .image {
-        height: 100px;
-        width: 150px;
-    }
+    /**/
+    /*.image {*/
+    /*    height: 100px;*/
+    /*    width: 150px;*/
+    /*}*/
 }
 
     .featured-projects {
@@ -211,9 +211,9 @@ div {
         font-size: 10px;
     }
 @media (min-width: 768px) {
-    .image {
-        height: 150px;
-        width: 200px;
-    }
+    /*.image {*/
+    /*    height: 150px;*/
+    /*    width: 200px;*/
+    /*}*/
 }
 
